# outgoing

./: GEMINI.md  Makefile  README.md  event list modes.txt  kill_ports.sh  local-database.md  network-activity-redesign-plan.md  outgoing.md  outgoing_contributor_profile.html  outgoing_expanded_application_card.html  outgoing_host_manage_v3 (1).html  outgoing_managing_page.html  outgoing_my_network_page.html  outgoing_need_detail_expanded.html  outgoing_planning_workspace.html  outgoing_quick_create_bottom_sheet (1).html  outgoing_things_to_do_section.html  outgoing_ticket_cards.html  outgoing_vendor_apply_and_invite.html  plan.md  search_page_mockup.html  skills-lock.json  ticket_dialog.html  ui-redesign.md  ui-redesign.txt
backend/: .env.example  .pylintrc  brain.txt  browse_feed_views.sql  build_files.sh  event_view.sql  generate_seed.py  index.py  password_encryption_command.txt  pyproject.toml  requirements.txt  reset_database.py  seed_supabase.sql  vercel.json
backend/api/: urls.py
backend/apps/chat/: apps.py  conversation_access.py  models.py  thread_key.py  user_pair_activity.py
backend/apps/content_generator/: apps.py
backend/apps/events/: admin.py  apps.py  migration_operations.py  models.py  signals.py
backend/apps/needs/: admin.py  apps.py  models.py
backend/apps/profiles/: admin.py  models.py  services.py  user_tags.py
backend/config/: urls.py  wsgi.py
backend/core/: ai.py  authentication.py  responses.py  utils.py  validators.py
backend/docs/: local-database.md
backend/scripts/: debug_google_images.py  google_images_downloader.py
(+630 files in other folders)
