[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "core", "apps", "config"]

[project]
name = "outgoing-backend"
version = "0.1.0"
description = "Backend API for Outgoing platform"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.11.1",
    "Django==5.2.11",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "djangorestframework==3.16.1",
    "djangorestframework_simplejwt==5.5.1",
    "drf-spectacular==0.29.0",
    "psycopg2-binary==2.9.11",
    "PyJWT==2.11.0",
    "python-dotenv==1.2.1",
    "PyYAML==6.0.3",
    "sqlparse==0.5.5",
    "Pillow>=10.0",
    "dj-database-url==2.1.0",
    "python-dateutil==2.9.0.post0",
    "gunicorn>=21.2.0",
    "whitenoise==6.7.0",
    "django-storages==1.14.4",
    "boto3>=1.28.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
